@@ -23,6 +23,7 @@
 - fix hash on confg option add and delete.
 - add plus to path match pattern.
 - fix multi entry ldap option handling.
+- cleanup options in amd_parse.c
 
 28/03/2014 autofs-5.0.9
 =======================
